[gd_scene load_steps=17 format=3 uid="uid://dnrwjhrn2he4a"]

[ext_resource type="Script" path="res://assets/scripts/main.gd" id="1_7whgk"]
[ext_resource type="Texture2D" uid="uid://caqnsg7k3wsli" path="res://assets/map/background.png" id="2_u88cg"]
[ext_resource type="Texture2D" uid="uid://b45apw80sqefb" path="res://assets/map/texture.png" id="3_fb152"]
[ext_resource type="Texture2D" uid="uid://bc5vwvrpmnj4n" path="res://assets/map/borders.png" id="4_aepjq"]
[ext_resource type="FontFile" uid="uid://r5av482limym" path="res://assets/fonts/bold.ttf" id="5_sn7en"]
[ext_resource type="FontFile" uid="uid://bnqoj5ale4bce" path="res://assets/fonts/regular.ttf" id="6_0so7v"]
[ext_resource type="Texture2D" uid="uid://2vvwvmkhmj2h" path="res://assets/resource_icons/wood.png" id="7_3xs03"]
[ext_resource type="Texture2D" uid="uid://doqwr3h6vmdna" path="res://assets/resource_icons/stone.png" id="8_lnjj5"]
[ext_resource type="Texture2D" uid="uid://bqhsxxl7uouvh" path="res://assets/resource_icons/grain.png" id="9_b83j0"]
[ext_resource type="Texture2D" uid="uid://5q0e24qhaicf" path="res://assets/resource_icons/coal.png" id="10_1r7mj"]
[ext_resource type="Texture2D" uid="uid://djbdghjf55fqu" path="res://assets/resource_icons/livestock.png" id="11_lqkxf"]
[ext_resource type="Texture2D" uid="uid://h4tj8b23qh25" path="res://assets/resource_icons/iron.png" id="12_xebub"]
[ext_resource type="Texture2D" uid="uid://brw6yqri4377m" path="res://assets/resource_icons/gold.png" id="13_186pv"]
[ext_resource type="Texture2D" uid="uid://kt7hx78o7oyh" path="res://assets/resource_icons/technology.png" id="14_qbruy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u24va"]
size = Vector2(1, 1)

[sub_resource type="Theme" id="Theme_3ixhm"]
default_font_size = 20

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7whgk")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(578.762, 323.031)
scale = Vector2(0.322399, 0.322399)
texture = ExtResource("2_u88cg")

[node name="Texture" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(574.5, 355)
scale = Vector2(0.412, 0.412)
texture = ExtResource("3_fb152")

[node name="Borders" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(574.5, 355)
scale = Vector2(0.227, 0.227)
texture = ExtResource("4_aepjq")

[node name="Sidebar" type="Control" parent="."]
z_index = 4
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 648.0

[node name="Fill" type="ColorRect" parent="Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Title" type="Label" parent="Sidebar"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 5.0
offset_right = 114.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_sn7en")
theme_override_font_sizes/font_size = 47
text = "CONQUEST"

[node name="Territory" type="Label" parent="Sidebar" groups=["sidebar"]]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.5
offset_top = 65.0
offset_right = 99.5
offset_bottom = 114.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 40
text = "Scotland"
horizontal_alignment = 1

[node name="Controller" type="Label" parent="Sidebar" groups=["sidebar"]]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 112.0
offset_right = 78.0
offset_bottom = 143.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.768627, 0.768627, 0.768627, 1)
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "NEUTRAL"
horizontal_alignment = 1

[node name="Population" type="Label" parent="Sidebar" groups=["sidebar"]]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = 165.0
offset_right = 72.0
offset_bottom = 201.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 29
text = "Pop. Unknown"
horizontal_alignment = 1

[node name="Army" type="Label" parent="Sidebar" groups=["sidebar"]]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.5
offset_top = 215.0
offset_right = 76.5
offset_bottom = 251.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 29
text = "Army Unknown"
horizontal_alignment = 1

[node name="TerritoryTo" type="Label" parent="Sidebar" groups=["secondary", "sidebar"]]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.5
offset_top = 281.0
offset_right = 99.5
offset_bottom = 330.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 40
text = "Scotland"
horizontal_alignment = 1

[node name="ControllerTo" type="Label" parent="Sidebar" groups=["secondary", "sidebar"]]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 329.0
offset_right = 78.0
offset_bottom = 360.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.768627, 0.768627, 0.768627, 1)
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "NEUTRAL"
horizontal_alignment = 1

[node name="PopulationTo" type="Label" parent="Sidebar" groups=["secondary", "sidebar"]]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = 381.0
offset_right = 72.0
offset_bottom = 417.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 29
text = "Pop. Unknown"
horizontal_alignment = 1

[node name="ArmyTo" type="Label" parent="Sidebar" groups=["secondary", "sidebar"]]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.5
offset_top = 431.0
offset_right = 76.5
offset_bottom = 467.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 29
text = "Army Unknown"
horizontal_alignment = 1

[node name="WoodIcon" type="Sprite2D" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
position = Vector2(58, 301)
scale = Vector2(0.075, 0.075)
texture = ExtResource("7_3xs03")

[node name="WoodValue" type="Label" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 289.0
offset_right = 38.0
offset_bottom = 325.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="StoneIcon" type="Sprite2D" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
position = Vector2(155, 301)
scale = Vector2(0.075, 0.075)
texture = ExtResource("8_lnjj5")

[node name="StoneValue" type="Label" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 56.0
offset_top = 289.0
offset_right = 135.0
offset_bottom = 325.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="GrainIcon" type="Sprite2D" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
position = Vector2(58, 357)
scale = Vector2(0.075, 0.075)
texture = ExtResource("9_b83j0")

[node name="GrainValue" type="Label" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 345.0
offset_right = 38.0
offset_bottom = 381.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="CoalIcon" type="Sprite2D" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
position = Vector2(155, 357)
scale = Vector2(0.075, 0.075)
texture = ExtResource("10_1r7mj")

[node name="CoalValue" type="Label" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 56.0
offset_top = 345.0
offset_right = 135.0
offset_bottom = 381.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="LivestockIcon" type="Sprite2D" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
position = Vector2(58, 413)
scale = Vector2(0.075, 0.075)
texture = ExtResource("11_lqkxf")

[node name="LivestockValue" type="Label" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 401.0
offset_right = 38.0
offset_bottom = 437.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="IronIcon" type="Sprite2D" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
position = Vector2(155, 413)
scale = Vector2(0.075, 0.075)
texture = ExtResource("12_xebub")

[node name="IronValue" type="Label" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 56.0
offset_top = 401.0
offset_right = 135.0
offset_bottom = 437.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="GoldIcon" type="Sprite2D" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
position = Vector2(58, 469)
scale = Vector2(0.075, 0.075)
texture = ExtResource("13_186pv")

[node name="GoldValue" type="Label" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 457.0
offset_right = 38.0
offset_bottom = 493.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="TechnologyIcon" type="Sprite2D" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
position = Vector2(155, 469)
scale = Vector2(0.075, 0.075)
texture = ExtResource("14_qbruy")

[node name="TechnologyValue" type="Label" parent="Sidebar" groups=["resource", "sidebar"]]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 56.0
offset_top = 457.0
offset_right = 135.0
offset_bottom = 493.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 25
text = "100"

[node name="Confirm" type="Button" parent="Sidebar"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = 508.0
offset_right = 84.5
offset_bottom = 586.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_sn7en")
theme_override_font_sizes/font_size = 29
disabled = true
text = "COMPUTING..."

[node name="Continue" type="Button" parent="Sidebar"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 597.0
offset_right = 88.0
offset_bottom = 640.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_sn7en")
theme_override_font_sizes/font_size = 29
text = "Continue"

[node name="Cursor" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Cursor"]
shape = SubResource("RectangleShape2D_u24va")

[node name="TransferSelect" type="Control" parent="."]
visible = false
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_left = 501.0
offset_top = 209.0
offset_right = 901.0
offset_bottom = 439.0

[node name="Fill" type="ColorRect" parent="TransferSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="Title" type="Label" parent="TransferSelect"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_sn7en")
theme_override_font_sizes/font_size = 45
text = "Transferring"

[node name="Soldiers" type="SpinBox" parent="TransferSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.9063
offset_top = -57.0
offset_right = 14.9063
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3ixhm")
value = 100.0
rounded = true
custom_arrow_step = 100.0

[node name="SoldiersLabel" type="Label" parent="TransferSelect"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -57.0
offset_right = 105.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 31
text = "Soldiers"
horizontal_alignment = 1

[node name="CountryLabel" type="Label" parent="TransferSelect"]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -133.5
offset_top = -137.0
offset_right = 133.5
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/line_spacing = -6
theme_override_fonts/font = ExtResource("6_0so7v")
theme_override_font_sizes/font_size = 39
text = "from Constantinople
to Constantinople"
horizontal_alignment = 1

[node name="Confirm" type="Button" parent="TransferSelect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -44.0
offset_right = 51.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_sn7en")
theme_override_font_sizes/font_size = 24
text = "CONFIRM"

[connection signal="pressed" from="Sidebar/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Sidebar/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="TransferSelect/Confirm" to="." method="_on_transfer_confirm_pressed"]
